# rrr

./: README.md  columns932  meson.build  run
src/: meson.build
src/services/: meson.build
src/services/board/: board.cpp  board.hpp  meson.build
src/services/browser/: browser.cpp  browser.hpp
src/services/info_bar/: info_bar.cpp  info_bar.hpp  meson.build
src/services/layer/: layer.cpp  layer.hpp  meson.build
src/services/manager/: manager.hpp
src/services/managers/: event_manager.hpp  manager.hpp  meson.build  state_manager.hpp
src/services/managers/manager/: manager.cpp  manager.hpp
src/services/managers/manager/board/: board.cpp  board.hpp  meson.build
src/services/managers/state_manager/: state_manager.cpp  state_manager.hpp
src/services/menu/: menu.hpp
src/services/menu_bar/: menu_bar.cpp  menu_bar.hpp  meson.build
src/services/menu_bar_old/: menu_bar.cpp  menu_bar.hpp  meson.build
src/services/menu_old/: menu.cpp  meson.build
src/services/ncurses/: style.hpp  system.hpp
src/services/transaction/: meson.build  transaction.hpp
src/services/ui/browser/: browser.cpp  browser.hpp  meson.build
src/services/ui/browser/decorator/: decorator.cpp  decorator.hpp
src/services/ui/browser/file/: file.cpp  file.hpp
src/services/ui/browser/history/: history.cpp  history.hpp
src/services/ui/browser/navigation/: navigation.cpp  navigation.hpp
src/services/ui/browser/preview/: preview.cpp  preview.hpp
src/services/ui/command_line/: command_line.cpp  command_line.hpp  meson.build
src/services/ui/info_bar/: info_bar.cpp  info_bar.hpp
src/services/ui/menu_bar/: menu_bar.cpp  menu_bar.hpp  meson.build
src/services/ui/system_bar/: meson.build  system_bar.cpp  system_bar.hpp
src/system/: config.hpp  meson.build
src/utils/: config.hpp  convert.hpp
subprojects/: hack.wrap  tools.wrap
tests/: meson.build
tests/src/: config.hpp  create_file_struct.cpp  navigation.cpp  preview.cpp
tests/src/command_line/: autofill.cpp  mkdir.cpp  move.cpp  multiremove.cpp  paste.cpp  remove.cpp  rename.cpp  touch.cpp
tests/src/complex/: complex.cpp
tests/src/history/: history.cpp
tests/src/navigation/: empty_dir.cpp  left_right.cpp  up_down.cpp
tests/src/preview/: preview.cpp
tests/src/select/: select.cpp
tmp/src/: meson.build
tmp/src/services/managers/: state_manager.hpp
tmp/src/services/ui/browser/: browser.cpp  meson.build
tmp/src/services/ui/browser/decorator/: decorator.hpp
tmp/src/services/ui/info_bar/: info_bar.cpp  info_bar.hpp
tmp/src/utils/: convert.hpp
